--- a/style.css
+++ b/style.css
@@ -1,24 +1,63 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
 
 :root{
     --primary--color: #0d0d0d;
     --secondary--color: #ffffff;
     --text--spacing: 1.25rem;
     --padding: 1rem;
-    
-
+    --border-radius: 10px ;
+    --theme--color: #ff0000;
+    --font-family:'Passion One', cursive;
 }
 
+:root{
+    --wombat-red-hover: #c40b0a;
+    --button-green: #00C642;
+    --wombat-yellow: #FFCD3A;
+    --wombat-violet: #8956FF;
+    --wombat-purple: #C836C3;
+    --wombat-green: #00C642;
+    --wombat-teal: #29ABE2;
+    --light-blue: #70b8ff;
+    --wombat-red: #cb3837;
+    --header-color: #000;
+    --bg-dark: #cb3837;
+    --npmRed: #cb3837;
+    --npmLightRed: #fb3e44;
+    --blue: #357edd;
+    --bg: #fff;
+    --background-color: #fafafa;
+    --wombat-bg-red: rgba(203, 55, 56, 0.1);
+    --code: "Fira Mono", "Andale Mono", "Consolas", monospace;
+    --code-ls: 0px;
+    --code-lh: 24px;
+    --standardCardTransition: all 0.2s ease;
+    --header-letter-spacing: 0.015625em;
+    --readme-font-size: 18px;
+    --readme-line-height: 1.6;
+    --copy-color: rgba(0,0,0,0.85);
+    --code-bg: #f7f7f7;
+    --code-box-radius: 2px;
+}
 
-
+/* 
+==================
+Global variables
+==================
+*/
 
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-size: 18px;
+    
 }
 
+body{
+    background-color: var(--background-color);
+}
 
 
 
@@ -45,9 +84,19 @@ align-content: space-between;
 
 .welcome-page{
     background: linear-gradient(#833ab4, #fd1d1d, #fcb045 );
-
+    display: flex;
+    justify-content: center;
+    height: 50vh;
 }
 .welcome-body {
     color: var(--secondary--color);
+    /* line-height: 0.25rem; */
+    text-align: center;
+    padding-top: 1rem;
+}
+
+label{
+    font-size: var(--font-family);
+    font: bolder;
 
 }
