made sign up page and html

--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ body{
 }
 
 
+a{
+    text-decoration:none ;
+
+}
 
 
 .nav-ul{
@@ -68,6 +72,13 @@ justify-content: end;
 align-content: space-between;
 
 
+
+}
+
+.seachbar-div{
+display: flex;
+align-content: center;
+justify-content: space-between;
 
 }
 
@@ -86,15 +97,26 @@ align-content: space-between;
     background: linear-gradient(#833ab4, #fd1d1d, #fcb045 );
     display: flex;
     justify-content: center;
-    height: 50vh;
+    /* text-align: center; */
+     align-items: center;   
+    /* min-height: 50vh;  */
+    height: 900px;
 }
 .welcome-body {
     color: var(--secondary--color);
     /* line-height: 0.25rem; */
     text-align: center;
+    /* justify-content: center; */
+    font-size: 96px;
     padding-top: 1rem;
     
 }
+
+.welcome-body h1{
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+}
+
 
 label{
     font-size: var(--font-family);
@@ -105,6 +127,8 @@ label{
     margin-top: 1rem;
     padding: 0.75rem;
     text-align: center;
+    background: var(--background-color);
+
 }
 .second-body p {
     margin-top: 1rem;
@@ -118,6 +142,7 @@ label{
     text-align: center;
     color: var(--bg);
     padding: 0.75rem;
+    /* background: var(--background-color); */
 }
 
 .third-body h1{
@@ -150,4 +175,38 @@ label{
 }
 .btn{
     transition: var(--standardCardTransition);
+}
+
+
+
+/* 
+==============
+SIGN UP SECTIOn
+==============
+*/
+
+.sign-up-container{
+   display: flex;
+   justify-content: center; 
+
+}
+
+.sign-up-box{
+    display: flex;
+    /* align-items: center; */
+    /* flex-wrap: nowrap;
+    justify-content: center;   */
+    flex-direction: column;
+    height: 20rem;
+    width: 15rem;
+    border: black solid 0.05rem;
+    padding: 1rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top:4rem ;
+
+}
+
+.NPM-heading{
+    font-weight: bolder;
+
 }
